add booklist function

--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
       <h1>Awesome Books</h1>
 
       <section class="book-list-container">
-        <div class="book-info">
-          <p>Lorem ipsum</p>
-          <p>Testeroo Testyy</p>
-          <button type="button" title="remove book">Remove</button>
-        </div>
-
-        <div class="book-info">
-          <p>Lorem ipsum</p>
-          <p>Testeroo Testyy</p>
-          <button type="button" title="remove book">Remove</button>
-        </div>
+        
       </section>
 
       <form action="">
@@ -36,5 +26,6 @@
         <button type="submit">Add</button>
       </form>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
