create book class

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <main class="main">
       <h1>Awesome Books</h1>
 
-      <section class="book-list-container">
-        
-      </section>
+      <section class="book-list-container"></section>
 
       <form action="">
         <div class="form-group">
-          <input type="text" placeholder="Title" required />
+          <input type="text" placeholder="Title" required name="title" />
         </div>
         <div class="form-group">
-          <input type="text" placeholder="Author" required />
+          <input type="text" placeholder="Author" required name="author" />
         </div>
 
         <button type="submit">Add</button>
