style book list

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <main class="main">
-      <h1>Awesome Books</h1>
+    <main class="main" >
+      <h1>All awesome books</h1>
 
       <section class="book-list-container"></section>
 
