complete styling for books website

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <section class="book-list-container"></section>
 
       <form action="">
+        <hr />
+
+        <h1>Add a new book</h1>
+
         <div class="form-group">
           <input type="text" placeholder="Title" required name="title" />
         </div>
@@ -21,7 +25,9 @@
           <input type="text" placeholder="Author" required name="author" />
         </div>
 
-        <button type="submit">Add</button>
+        <div class="form-group">
+          <button type="submit">Add</button>
+        </div>
       </form>
     </main>
     <script src="script.js"></script>
