--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <main class="main" >
+    <nav>
+      <h3 class="navbar-title">Awesome Books</h5>
+
+      <ul>
+        <li>
+          <a href="">List</a>
+        </li>
+        <li>
+          <a href="">Add new</a>
+        </li>
+        <li>
+          <a href="">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="current-date">
+      <p>March 19th 2023, 9:25:24 am</p>
+    </div>
+
+    <main class="main">
       <h1>All awesome books</h1>
 
       <section class="book-list-container"></section>
@@ -30,6 +49,10 @@
         </div>
       </form>
     </main>
+
+    <footer>
+      <p>Copyright</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
