--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
           <button type="submit">Add</button>
         </div>
       </form>
+      <div class="contact">
+        <h1>Contact information</h1>
+        <p>Do you have any question or you just want to say "Hello"?<br> you can reach out to us</p>
+        <ul>
+          <li>Our e-mail:mail@mail.com</li>
+          <li>our phone number: 0043586534422</li>
+          <li>our address: Streetname 22, 84503 City, country</li>
+
+          </li>
+        </ul>
+      </div>
+
     </main>
 
     <footer>
