add navigation to the three content sections

--- a/index.html
+++ b/index.html
@@ -9,62 +9,19 @@
   </head>
   <body>
     <nav>
-      <h3 class="navbar-title">Awesome Books</h5>
+      <h3 class="navbar-title">Awesome Books</h3>
 
-      <ul>
-        <li>
-          <a href="">List</a>
-        </li>
-        <li>
-          <a href="">Add new</a>
-        </li>
-        <li>
-          <a href="">Contact</a>
-        </li>
-      </ul>
+      <ul></ul>
     </nav>
     <div class="current-date">
-      <p>March 19th 2023, 9:25:24 am</p>
+      <p>February 15th 2023, 9:25:24 am</p>
     </div>
 
-    <main class="main">
-      <h1>All awesome books</h1>
-
-      <section class="book-list-container"></section>
-
-      <form action="">
-        <hr />
-
-        <h1>Add a new book</h1>
-
-        <div class="form-group">
-          <input type="text" placeholder="Title" required name="title" />
-        </div>
-        <div class="form-group">
-          <input type="text" placeholder="Author" required name="author" />
-        </div>
-
-        <div class="form-group">
-          <button type="submit">Add</button>
-        </div>
-      </form>
-      <div class="contact">
-        <h1>Contact information</h1>
-        <p>Do you have any question or you just want to say "Hello"?<br> you can reach out to us</p>
-        <ul>
-          <li>Our e-mail:mail@mail.com</li>
-          <li>our phone number: 0043586534422</li>
-          <li>our address: Streetname 22, 84503 City, country</li>
-
-          </li>
-        </ul>
-      </div>
-
-    </main>
+    <main class="main"></main>
 
     <footer>
       <p>Copyright</p>
     </footer>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
